# fuzzy-enigma-card-recognition

./: .gitignore  .gitmodules  HOWTO.md  INTEGRATION.md  March26NightDev.md  README.md  pyproject.toml  roadmap.md
docs/: changelog.md  custom-ocr-decision.md  failure-reason-codes.md  hotswappable-recognition-backend-checklist.md  integration-migration.md  milestone11-baseline.md  milestone9-closeout.md  mode-pipelines.md  moss-backend-hardening-sprint.md  moss-machine-parallel-pipeline.md  parent-facing-controls.md  recognition-speed-tuning.md  submodule-feedback-sprint-plan.md
scripts/: analyze_split_title_hotspots.py  build_catalog.py  build_regression_fixture_set.py  build_split_fixture_set.py  compare_with_moss_machine.py  eval_fixture_set.py  example_sorter_session.py  prehash_missing_art_refs.py  query_offline_catalog.py  report_split_family_metrics.py  run_moss_machine_once.py  setup_dev_env.ps1  setup_dev_env.sh  setup_moss_machine_sparse.ps1  stress_live_runtime.py
tests/: conftest.py  test_adapter.py  test_api.py  test_art_match.py  test_art_prehash.py  test_build_catalog.py  test_catalog_maintenance.py  test_catalog_query.py  test_comparison.py  test_config.py  test_detector.py  test_eval_pair_store.py  test_evaluation.py  test_image_io.py  test_local_index.py  test_matcher.py  test_normalize.py  test_ocr.py  test_operational_modes.py  test_query_offline_catalog_script.py  test_regression_fixtures.py  test_report_split_family_metrics.py  test_roi.py  test_runtime.py  test_scorer.py  test_scryfall_sync.py  test_session.py  test_set_symbol.py  (+6 more)
(+50 files in other folders)
