[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-recognition-engine"
version = "0.1.0"
description = "Lightweight card recognition engine scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ocr = [
  "paddleocr>=2.7",
  "rapidocr-onnxruntime>=1.4",
]
ui = [
  "scrython>=2.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
