[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzy-enigma-card-recognition"
version = "0.1.0"
description = "Fuzzy Enigma Card Recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.8",
]

[project.scripts]
card-ui = "card_engine.ui.app:main"

[project.optional-dependencies]
ocr = [
  "paddleocr>=2.7",
  "rapidocr-onnxruntime>=1.4",
]
ui = [
  "scrython>=2.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
